samples/_failures_safe/1761437679_a9c910_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c5167d3.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_1c5167d3.c:187:5: error: expected ‘,’ or ‘;’ at end of input
  187 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_1c5167d3.c:187:5: error: expected declaration or statement at end of input
